syntax = "proto3";

package greenfield.challenge;

import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "greenfield/challenge/params.proto";
import "greenfield/challenge/types.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/bnb-chain/greenfield/x/challenge/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/greenfield/challenge/params";
  }
  // Queries the latest attested challenge id.
  rpc LatestAttestedChallenge(QueryLatestAttestedChallengeRequest) returns (QueryLatestAttestedChallengeResponse) {
    option (google.api.http).get = "/greenfield/challenge/latest_attested_challenge";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryParamsRequest is request type for the Query/LatestAttestedChallenge RPC method.
message QueryLatestAttestedChallengeRequest {}

// QueryParamsResponse is response type for the Query/LatestAttestedChallenge RPC method.
message QueryLatestAttestedChallengeResponse {
  uint64 challengeId = 1;
}

// this line is used by starport scaffolding # 3
